--- a/JG_Saldumi_11/JG_Saldumi_11.csproj
+++ b/JG_Saldumi_11/JG_Saldumi_11.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="..\IZMAINAS pROJEKTA.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="..\IZMAINAS pROJEKTA.Designer.cs">
+      <DependentUpon>IZMAINAS pROJEKTA.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="..\IZMAINAS pROJEKTA.resx">
+      <DependentUpon>IZMAINAS pROJEKTA.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
